<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Police</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="camera">照相机</string>
    <string name="video">摄像机</string>
    <string name="record">录音机</string>
    <string name="files">文件</string>
    <string name="setting">设置</string>
    <string name="wireless">一键传输</string>
    <string name="back">返回</string>
    <string name="storage_no_enough">存储空间不足,拍摄失败!</string>
    <string name="timeCount">00:00:00</string>
    <string name="wireless2">无线和网络</string>
    <string name="device">设备</string>
    <string name="wifi">WIFI</string>
    <string name="wifi_setting">WIFI设置</string>
    <string name="threeg">3G</string>
    <string name="storage">存储</string>
    <string name="about">关于本机</string>
    <string name="connected">已经连接</string>
    <string name="storage_describe">存储(可用/全部)</string>
    <string name="camera_file">照片</string>
    <string name="video_file">视频</string>
    <string name="audio_file">录音</string>
    <string name="device_name">机器型号</string>
    <string name="android_version">平台版本</string>
    <string name="version">软件版本</string>
    <string name="level">信号强度</string>
    <string name="security">安全性</string>
    <string name="password">密码</string>
    <string name="connect">连接</string>
    <string name="cancel">取消</string>
</resources>