<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Account" 
    android:background="@drawable/background"
    >
    <TableLayout 
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TableRow 
            android:layout_weight="1">
            <RelativeLayout 
                android:layout_margin="2dp"
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                >
	            <ImageButton android:id="@+id/camera"
	                android:layout_height="match_parent"
	                android:layout_width="match_parent"
	                android:layout_centerInParent="true"
	                android:padding="0dp"
	                android:src="@drawable/camera"
	                android:background="@drawable/button_press"
	                android:contentDescription="@string/camera"/>
            </RelativeLayout>
            <RelativeLayout 
                android:layout_margin="2dp"
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                >
	            <ImageButton android:id="@+id/video"
	                android:layout_height="match_parent"
	                android:layout_width="match_parent"
	                android:layout_centerInParent="true"
	                android:padding="0dp"
	                android:src="@drawable/video"
	                android:background="@drawable/button_press"
	                android:contentDescription="@string/video"/>
            </RelativeLayout>
        </TableRow>
        <TableRow 
            android:layout_weight="1">
             <RelativeLayout 
                android:layout_margin="2dp"
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                >
	            <ImageButton android:id="@+id/record"
	                android:layout_height="match_parent"
	                android:layout_width="match_parent"
	                android:layout_centerInParent="true"
	                android:padding="0dp"
	                android:background="@drawable/button_press"
	                android:src="@drawable/record"
	                android:contentDescription="@string/record"/>
            </RelativeLayout>
             <RelativeLayout 
                android:layout_margin="2dp"
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                >
	            <ImageButton android:id="@+id/files"
	                android:layout_height="match_parent"
	                android:layout_width="match_parent"
	                android:layout_centerInParent="true"
	                android:padding="0dp"
	                android:background="@drawable/button_press"
	                android:src="@drawable/files"
	                android:contentDescription="@string/files"/>
            </RelativeLayout>
        </TableRow>
        <TableRow 
            android:layout_weight="1">
              <RelativeLayout 
                android:layout_margin="2dp"
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                >
	            <ImageButton android:id="@+id/setting"
	                android:layout_height="match_parent"
	                android:layout_width="match_parent"
	                android:layout_centerInParent="true"
	                android:padding="0dp"
	                android:background="@drawable/button_press"
	                android:src="@drawable/setting"
	                android:contentDescription="@string/setting"/>
            </RelativeLayout>
             <RelativeLayout 
                android:layout_margin="2dp"
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_press"
                >
	            <ImageButton android:id="@+id/wireless"
	                android:layout_height="match_parent"
	                android:layout_width="match_parent"
	                android:layout_centerInParent="true"
	                android:padding="0dp"
	                android:background="@drawable/button_press"
	                android:src="@drawable/wireless"
	                android:contentDescription="@string/wireless"/>
            </RelativeLayout>
        </TableRow>
    </TableLayout>


</RelativeLayout>