    <TableLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_menu"
        >
        <TableRow 
            android:layout_weight="1">
            <RelativeLayout 
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                >
	            <ImageButton android:id="@+id/camera"
	                android:padding="5dp"
	                android:layout_centerInParent="true"
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:background="@drawable/menu_button_press"
	                android:scaleType="center"
	                android:src="@drawable/btn_camera"
	                android:contentDescription="@string/camera"/>
	            <TextView android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:layout_below="@+id/camera"
	                android:layout_centerHorizontal="true"
	                android:text="@string/camera"
	                android:textColor="@android:color/white"/>
            </RelativeLayout>
             <RelativeLayout 
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                >
	            <ImageButton android:id="@+id/video"
	               android:padding="5dp"
	               android:layout_centerInParent="true"
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:background="@drawable/menu_button_press"
	                android:src="@drawable/btn_video"
	                android:contentDescription="@string/video"/>
	            <TextView android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:layout_below="@+id/video"
	                android:layout_centerHorizontal="true"
	                android:text="@string/video"
	                android:textColor="@android:color/white"/>
            </RelativeLayout>
             <RelativeLayout 
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                >
	            <ImageButton android:id="@+id/record"
	                android:padding="5dp"
	                android:layout_centerInParent="true"
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:scaleType="center"
	                android:background="@drawable/menu_button_press"
	                android:src="@drawable/btn_record"
	                android:contentDescription="@string/record"/>
	            <TextView android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:layout_below="@+id/record"
	                android:layout_centerHorizontal="true"
	                android:text="@string/record"
	                android:textColor="@android:color/white"/>
            </RelativeLayout>
        </TableRow>
        <TableRow 
            android:layout_weight="1">
             <RelativeLayout 
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                >
	            <ImageButton android:id="@+id/files"
	                android:padding="5dp"
	                android:layout_centerInParent="true"
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:scaleType="center"
	                android:background="@drawable/menu_button_press"
	                android:src="@drawable/btn_files"
	                android:contentDescription="@string/files"/>
	            <TextView android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:layout_below="@+id/files"
	                android:layout_centerHorizontal="true"
	                android:text="@string/files"
	                android:textColor="@android:color/white"/>
            </RelativeLayout>
            <RelativeLayout 
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                >
	            <ImageButton android:id="@+id/setting"
	                android:padding="5dp"
	                android:layout_centerInParent="true"
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:scaleType="center"
	                android:background="@drawable/menu_button_press"
	                android:src="@drawable/btn_setting"
	                android:contentDescription="@string/setting"/>
	            <TextView android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:layout_below="@+id/setting"
	                android:layout_centerHorizontal="true"
	                android:text="@string/setting"
	                android:textColor="@android:color/white"/>
            </RelativeLayout>
            <RelativeLayout 
                android:padding="0dp"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                >
	              <ImageButton android:id="@+id/back"
	                android:padding="5dp"
	                android:layout_centerInParent="true"
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:scaleType="center"
	                android:background="@drawable/menu_button_press"
	                android:src="@drawable/btn_back"
	                android:contentDescription="@string/back"/>
	              <TextView android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:layout_below="@+id/back"
	                android:layout_centerHorizontal="true"
	                android:text="@string/back"
	                android:textColor="@android:color/white"/>
              </RelativeLayout>
        </TableRow>
    </TableLayout>
